Fix filename issue for both Windows and Linux (heroku broken for some reason)